---
source: crates/pixi_manifest/src/system_requirements.rs
assertion_line: 309
expression: "\n        [system-requirements]\n        libc = { veion = \"2.12\" }\n        "
---
TOML parse error at line 3, column 16
  |
3 |         libc = { veion = "2.12" }
  |                ^^^^^^^^^^^^^^^^^^
unknown field `veion`, expected `family` or `version`
